--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Holy Bible Reader & Quiz</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#8b7500">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="theme-color" content="#8b7500" />
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 <style>
 body{font-family:system-ui;background:#f2f2f2;margin:0}
@@ -22,9 +22,13 @@ section{padding:10px;text-align:center}
 footer{background:#222;color:#ccc;padding:10px;text-align:center}
 #dailyVerse{color:gold}
 #timer{font-weight:bold;color:#b00}
-button,label{
-  cursor:pointer;
-  -webkit-tap-highlight-color:transparent;
+
+/* Updated CSS for better touch support */
+button, label {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation; /* Added for better touch responsiveness */
+  pointer-events: auto;
 }
 select{max-width:240px;margin:6px auto}
 </style>
@@ -42,8 +46,8 @@ select{max-width:240px;margin:6px auto}
 </header>
 
 <section>
-  <input id="book" placeholder="Book (e.g. Genesis)">
-  <input id="chapter" type="number" placeholder="Chapter">
+  <input id="book" placeholder="Book (e.g. Genesis)" />
+  <input id="chapter" type="number" placeholder="Chapter" />
   <button id="searchBtn">Read</button>
 
   <div id="reader">Search a Bible chapter…</div>
